clusters/titania/apps/bookorbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  labels:
    app.kubernetes.io/name: bookorbit
    app.kubernetes.io/instance: bookorbit
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bookorbit
    app.kubernetes.io/instance: bookorbit
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
